# httpgenerator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HttpGenerator.sln  Makefile  README.md  VSIX.sln  qodana.yaml  snapcraft.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: squad.agent.md
.github/scripts/: check-crates-io-version.py  set-rust-workspace-version.py
.github/workflows/: build.yml  changelog.yml  codecov.yml  production-tests.yml  regression-tests.yml  release-dotnet.yml  release-preview.yml  release-template.yml  release-vsix.yml  release.yml  smoke-tests.yml  squad-heartbeat.yml  static.yml  template-url.yml  template.yml  vscode.yml  vsix.yml
.opencode/: prd-body.md
.squad/: .first-run  config.json  copilot-instructions.md  decisions-archive.md  decisions.md  issue-lifecycle.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-05T16-03-24Z-crates-io-publishing.md  2026-05-08T11-56-18-modularization-planning.md  2026-05-08T11-56-18Z-scribe-session.md  2026-05-13T21-06-43Z-vscode-rust-host-final.md  2026-05-13T21-06-43Z-vscode-rust-host.md  2026-05-18T09-53-21Z-vsix-async-implementation.md  2026-05-18T11-14-38Z-commit-policy.md  2026-05-21T13-00-01Z-docs-rs-closeout.md  20260521T130001Z-docs-rs-pass.md
.squad/orchestration-log/: 2026-05-05T16-03-24Z-bishop.md  2026-05-05T16-03-24Z-hicks.md  2026-05-05T16-03-24Z-hudson.md  2026-05-05T16-03-24Z-ripley.md  2026-05-08T11-56-18-bishop.md  2026-05-08T11-56-18Z-hicks-4.md  2026-05-13T21-06-43Z-final-approval.md  2026-05-13T21-06-43Z-hicks.md  2026-05-13T21-06-43Z-hudson.md  2026-05-13T21-06-43Z-ripley.md  2026-05-18T09-53-21Z-bishop.md  2026-05-18T09-53-21Z-hicks.md  2026-05-18T09-53-21Z-hudson.md  2026-05-18T09-53-21Z-ripley.md  2026-05-18T11-14-38Z-ripley.md  2026-05-21T13-00-01Z-bishop-validation.md  2026-05-21T13-00-01Z-hicks.md  2026-05-21T13-00-01Z-ripley-audit.md  20260521T130001Z-hicks-docs-batches.md  20260521T130001Z-hudson.md  20260521T130001Z-ripley.md
.squad/templates/: squad.agent.md
crates/httpgenerator-cli/: Cargo.toml
crates/httpgenerator-cli/src/: args.rs  lib.rs  main.rs  telemetry.rs
crates/httpgenerator-cli/tests/: help_contract.rs
crates/httpgenerator-compat/: Cargo.toml
crates/httpgenerator-core/: Cargo.toml
crates/httpgenerator-openapi/: Cargo.toml
crates/httpgenerator-openapi/src/: error.rs  format.rs  inspect.rs  lib.rs  loader.rs  normalize.rs  raw.rs  source.rs  typed.rs  version.rs
crates/httpgenerator-openapi/tests/: generator_parity.rs
docs/: Marketplace.md  README.md  index.html  install.ps1  install.sh  script.js  styles.css
legacy/: HttpGenerator.sln
legacy/HttpGenerator/: HttpGenerator.csproj  Program.cs
legacy/HttpGenerator.Core/: HttpFile.cs
legacy/HttpGenerator.VSIX/: GenerateDialog.cs  GenerateDialog.resx
src/: Directory.Build.props  HttpGenerator.sln  VSIX.sln  cli.rs  generator.rs  lib.rs  main.rs  naming.rs  openapi.rs  publish-manifest.json  publish.ps1
src/HttpGenerator.Core/: AzureEntraID.cs  GeneratorResult.cs  GeneratorSettings.cs  HttpFile.cs  HttpFileGenerator.cs  HttpGenerator.Core.csproj  OpenApiDocumentFactory.cs  OperationNameGenerator.cs  (+2 more)
src/HttpGenerator.Core.Tests/: HttpGenerator.Core.Tests.csproj  OpenApiDocumentFactoryTests.cs  SwaggerPetstoreTests.cs  TestFile.cs
src/rust/cli/: Cargo.toml  README.md
src/rust/cli/src/: args.rs  args_tests.rs  auth.rs  error.rs  execution.rs  lib.rs  main.rs  observer.rs  ui.rs  writer.rs
src/rust/cli/src/args/: help.rs  mod.rs  tests.rs  types.rs
src/rust/cli/src/execution/: authorization.rs  mod.rs  orchestrator.rs  settings.rs  tests.rs  validation.rs
src/rust/cli/src/telemetry/: events.rs  exceptionless.rs  mod.rs  recorder.rs  redaction.rs  sink.rs  tests.rs
src/rust/cli/src/ui/: format.rs  mod.rs  presenter.rs  render.rs
src/rust/cli/tests/: differential_petstore.rs  facade_contract.rs
src/rust/cli/tests/support/: mod.rs  runner.rs
src/rust/core/: Cargo.toml  README.md
src/rust/core/src/: base_url.rs  file_naming.rs  lib.rs  operation_name.rs  privacy.rs  string_extensions.rs  support_information.rs
src/rust/core/src/generator/: mod.rs  modes.rs  render.rs  sample.rs  tests.rs  text.rs
src/rust/core/src/model/: mod.rs  output_type.rs  result.rs  settings.rs  tests.rs
src/rust/core/src/normalized/: document.rs  http.rs  mod.rs  parameter.rs  request_body.rs  schema.rs  tests.rs
src/rust/core/src/openapi/: error.rs  format.rs  inspect.rs  loader.rs  mod.rs  normalize.rs  raw.rs  source.rs  typed.rs  version.rs
src/rust/core/src/openapi/inspect/: components.rs  mod.rs  model.rs  paths.rs  schema.rs  tests.rs
src/rust/core/src/openapi/normalize/: mod.rs  operations.rs  parameters.rs  request_body.rs  schema.rs  servers.rs  tests.rs
src/rust/core/tests/: facade_contracts.rs  openapi_generator_parity.rs
src/rust/httpgenerator-cli/: Cargo.toml  README.md
src/rust/httpgenerator-cli/src/: lib.rs  ui.rs
src/rust/httpgenerator-cli/tests/: help_contract.rs
src/rust/httpgenerator-compat/: Cargo.toml
src/rust/httpgenerator-compat/src/: lib.rs  runner.rs
src/rust/httpgenerator-compat/tests/: differential_petstore.rs
src/rust/httpgenerator-core/: Cargo.toml  README.md
src/rust/httpgenerator-core/src/: base_url.rs  error.rs  lib.rs  loader.rs  model.rs  normalize.rs  support_information.rs
src/rust/httpgenerator-core/src/openapi/: error.rs  format.rs  inspect.rs  loader.rs  normalize.rs  raw.rs  source.rs  typed.rs  version.rs
src/rust/httpgenerator-core/tests/: generator_parity.rs  openapi_generator_parity.rs
src/rust/httpgenerator-openapi/: Cargo.toml  README.md
src/rust/httpgenerator-openapi/src/: error.rs  inspect.rs  loader.rs  normalize.rs  source.rs
src/rust/httpgenerator-openapi/tests/: generator_parity.rs
test/: generate-with-azure-token.ps1  smoke-tests.ps1  smoke-tests.sh
(+202 files in other folders)
