[package]
name = "httpgenerator"
version = "1.1.0"
edition = "2021"
description = "Generate .http files from OpenAPI specifications"
license = "MIT"
repository = "https://github.com/christianhelle/httpgenerator"
include = ["Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "src/**/*.rs"]

[[bin]]
name = "httpgenerator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
indexmap = "2.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
