[workspace]
members = [
  "src/rust/httpgenerator-core",
  "src/rust/httpgenerator-openapi",
  "src/rust/httpgenerator-cli",
  "src/rust/httpgenerator-compat",
]
resolver = "2"

[workspace.package]
authors = ["Christian Helle"]
edition = "2024"
homepage = "https://christianhelle.com/httpgenerator/"
license = "MIT"
repository = "https://github.com/christianhelle/httpgenerator"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
azure_core = "0.35.0"
azure_identity = "0.35.0"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.3"
httpgenerator-core = { version = "0.1.0", path = "src/rust/httpgenerator-core" }
httpgenerator-openapi = { version = "0.1.0", path = "src/rust/httpgenerator-openapi" }
openapiv3 = "2.2.0"
openapiv3_1 = "0.1.5"
pollster = "0.4.0"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = [
  "blocking",
  "gzip",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
url = "2.5.7"
yaml_serde = "0.10.4"
