[package]
name = "httpgenerator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "httpgenerator"
path = "src/main.rs"

[dependencies]
azure_core.workspace = true
azure_identity.workspace = true
clap.workspace = true
console.workspace = true
httpgenerator-core.workspace = true
httpgenerator-openapi.workspace = true
pollster.workspace = true
serde_json.workspace = true
unicode-width = "0.2"
