[package]
name = "httpgenerator-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "Core generation, normalization, and OpenAPI support for HTTP File Generator"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["openapi", "http", "generator", "codegen", "rest"]
categories = ["development-tools", "web-programming"]

[features]
default = ["openapi"]
openapi = [
    "dep:openapiv3",
    "dep:openapiv3_1",
    "dep:reqwest",
    "dep:serde_json",
    "dep:yaml_serde",
]

[dependencies]
base64 = "0.22.1"
hostname = "0.4.1"
openapiv3 = { workspace = true, optional = true }
openapiv3_1 = { workspace = true, optional = true }
regex.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
sha2 = "0.11.0"
url.workspace = true
yaml_serde = { workspace = true, optional = true }
