[package]
name = "httpgenerator"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "Generate .http files from OpenAPI specifications"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/httpgenerator"
readme = "README.md"
keywords = ["openapi", "http", "generator", "cli", "rest"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "httpgenerator_cli"

[[bin]]
name = "httpgenerator"
path = "src/main.rs"

[dependencies]
azure_core.workspace = true
azure_identity.workspace = true
clap.workspace = true
console.workspace = true
httpgenerator-core.workspace = true
httpgenerator-openapi.workspace = true
pollster.workspace = true
serde_json.workspace = true
unicode-width = "0.2"
