[package]
name = "httpgenerator-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "OpenAPI loading, normalization, and .http rendering for HTTP File Generator"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/httpgenerator-core"
readme = "README.md"
keywords = ["openapi", "http", "generator", "codegen", "rest"]
categories = ["development-tools", "web-programming"]

[dependencies]
base64 = "0.22.1"
hostname = "0.4.1"
openapiv3.workspace = true
openapiv3_1.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
url.workspace = true
yaml_serde.workspace = true
