[package]
name = "httpgenerator-openapi"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "OpenAPI loading, inspection, and normalization for HTTP File Generator"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["openapi", "http", "parser", "generator", "rest"]
categories = ["development-tools", "parser-implementations", "web-programming"]

[dependencies]
httpgenerator-core.workspace = true
openapiv3.workspace = true
openapiv3_1.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
yaml_serde.workspace = true
